Aktualizacja strony Festiwal Nauki 2024

--- a/index.html
+++ b/index.html
@@ -1,52 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Festiwal Nauki 2024</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<style>
-    a{
-        text-decoration: none;
-    }
-</style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <style>
+        a {
+            text-decoration: none;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Festiwal Nauki 2024</h1>
+    <h1 class="p-10">Festiwal Nauki 2024</h1>
+
+    <h3 class="p-5">Linki do projektów na serwerze</h3>
     <div class="col">
         <a href="./erasmus/" class="p-3">
-            <button type="button" class="btn btn-dark">Dark</button>
+            <button type="button" class="btn btn-dark">Erasmus (.html)</button>
         </a>
         <a href="./limber/" class="p-3">
-            <button type="button" class="btn btn-dark">Dark</button>
+            <button type="button" class="btn btn-dark">Limber (.html)</button>
         </a>
         <a href="./weather/" class="p-3">
-            <button type="button" class="btn btn-dark">Dark</button>
+            <button type="button" class="btn btn-dark">Weather forecast app (.html)</button>
         </a>
-        <a href="./racing.zip" class="p-3">
-            <button type="button" class="btn btn-dark">Dark</button>
+        <a href="./stepper-m" class="p-3">
+            <button type="button" class="btn btn-dark">Stepper M (.html)</button>
         </a>
+    </div>
+
+    <h3 class="p-5">Linki do projektów wymagających localhost</h3>
+    <div class="col">
         <a href="./wolf.zip" class="p-3">
-            <button type="button" class="btn btn-dark">Dark</button>
+            <button type="button" class="btn btn-dark">Wolf (.zip)</button>
         </a>
-        <a href="./stanowisko.mp4" class="p-3">
-            <button type="button" class="btn btn-dark">Dark</button>
+        <a href="./stepper-p.zip" class="p-3">
+            <button type="button" class="btn btn-dark">Stepper P (.zip)</button>
         </a>
-        <a href="" class="p-3">
-            <button type="button" class="btn btn-dark">Dark</button>
+    </div>
+
+    <h3 class="p-5">Linki do projektów lokalnych</h3>
+    <div class="col">
+        <a href="./racing.zip" class="p-3">
+            <button type="button" class="btn btn-dark">Racing game (.zip)</button>
         </a>
-        <a href="" class="p-3">
-            <button type="button" class="btn btn-dark">Dark</button>
+        <a href="./notepad-m" class="p-3">
+            <button type="button" class="btn btn-dark">Notepad M (.zip)</button>
         </a>
-        <a href="" class="p-3">
-            <button type="button" class="btn btn-dark">Dark</button>
-        </a>
-        <a href="" class="p-3">
-            <button type="button" class="btn btn-dark">Dark</button>
+        <a href="./notepad-p.zip" class="p-3">
+            <button type="button" class="btn btn-dark">Notepad P (.zip)</button>
         </a>
 
     </div>
+    <h3 class="p-5">Linki do materiałów</h3>
+    <div class="col">
+        <a href="./stanowisko.mp4" class="p-3">
+            <button type="button" class="btn btn-dark">Film na stanowisko (.mp4)</button>
+        </a>
+        <a href="./tapeta.png" class="p-3">
+            <button type="button" class="btn btn-dark">Tapeta (.png)</button>
+        </a>
+    </div>
 </body>
+
 </html>
