--- a/index.html
+++ b/index.html
@@ -23,39 +23,39 @@
     <h3 class="p-5">Linki do projektów na serwerze</h3>
     <div class="col">
         <a href="./erasmus/" class="p-3">
-            <button type="button" class="btn btn-blue">Erasmus (.html)</button>
+            <button type="button" class="btn btn-primary">Erasmus (.html)</button>
         </a>
         <a href="./limber/" class="p-3">
-            <button type="button" class="btn btn-blue">Limber (.html)</button>
+            <button type="button" class="btn btn-primary">Limber (.html)</button>
         </a>
         <a href="./weather/" class="p-3">
-            <button type="button" class="btn btn-blue">Weather forecast app (.html)</button>
+            <button type="button" class="btn btn-primary">Weather forecast app (.html)</button>
         </a>
         <a href="./stepper-m" class="p-3">
-            <button type="button" class="btn btn-blue">Stepper M (.html)</button>
+            <button type="button" class="btn btn-primary">Stepper M (.html)</button>
         </a>
     </div>
 
     <h3 class="p-5">Linki do projektów wymagających localhost</h3>
     <div class="col">
         <a href="./wolf.zip" class="p-3">
-            <button type="button" class="btn btn-red">Wolf (.zip)</button>
+            <button type="button" class="btn btn-warning">Wolf (.zip)</button>
         </a>
         <a href="./stepper-p.zip" class="p-3">
-            <button type="button" class="btn btn-red">Stepper P (.zip)</button>
+            <button type="button" class="btn btn-warning">Stepper P (.zip)</button>
         </a>
     </div>
 
     <h3 class="p-5">Linki do projektów lokalnych</h3>
     <div class="col">
         <a href="./racing.zip" class="p-3">
-            <button type="button" class="btn btn-green">Racing game (.zip)</button>
+            <button type="button" class="btn btn-success">Racing game (.zip)</button>
         </a>
         <a href="./notepad-m" class="p-3">
-            <button type="button" class="btn btn-green">Notepad M (.zip)</button>
+            <button type="button" class="btn btn-success">Notepad M (.zip)</button>
         </a>
         <a href="./notepad-p.zip" class="p-3">
-            <button type="button" class="btn btn-green">Notepad P (.zip)</button>
+            <button type="button" class="btn btn-success">Notepad P (.zip)</button>
         </a>
 
     </div>
