Zaktualizowano link do pliku Notepad M w index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <a href="./racing.zip" class="p-3">
             <button type="button" class="btn btn-success">Racing game (.zip)</button>
         </a>
-        <a href="./notepad-m" class="p-3">
+        <a href="./notepad-m.zip" class="p-3">
             <button type="button" class="btn btn-success">Notepad M (.zip)</button>
         </a>
         <a href="./notepad-p.zip" class="p-3">
