Dodano margines do kolumn w linkach

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1 class="p-10">Festiwal Nauki 2024</h1>
 
     <h3 class="p-5">Linki do projektów na serwerze</h3>
-    <div class="col">
+    <div class="col p-5">
         <a href="./erasmus/" class="p-3">
             <button type="button" class="btn btn-primary">Erasmus (.html)</button>
         </a>
@@ -37,7 +37,7 @@
     </div>
 
     <h3 class="p-5">Linki do projektów wymagających localhost</h3>
-    <div class="col">
+    <div class="col p-5">
         <a href="./wolf.zip" class="p-3">
             <button type="button" class="btn btn-warning">Wolf (.zip)</button>
         </a>
@@ -47,7 +47,7 @@
     </div>
 
     <h3 class="p-5">Linki do projektów lokalnych</h3>
-    <div class="col">
+    <div class="col p-5">
         <a href="./racing.zip" class="p-3">
             <button type="button" class="btn btn-success">Racing game (.zip)</button>
         </a>
@@ -60,7 +60,7 @@
 
     </div>
     <h3 class="p-5">Linki do materiałów</h3>
-    <div class="col">
+    <div class="col p-5">
         <a href="./stanowisko.mp4" class="p-3">
             <button type="button" class="btn btn-dark">Film na stanowisko (.mp4)</button>
         </a>
